--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "yn": "^3.1.1"
   },
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
