--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "arg": "^4.1.3",
     "create-require": "^1.1.1",
     "diff": "^4.0.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "make-error": "^1.3.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
@@ -16,11 +18,14 @@
     "yn": "^3.1.1"
   },
   "scripts": {
-    "start": "ts-node src/main.ts",
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/express": "^5.0.0"
+  }
 }
